feat: contact form refactor and error handling

--- a/source/sections/about/content.astro
+++ b/source/sections/about/content.astro
@@ -4,7 +4,7 @@ import MysteryButton from "@app/components/mystery-button.astro";
 import ObservedSection from "@app/layouts/observed-section.astro";
 
 import * as Carousel from "@app/components/ui/svelte/carousel";
-import { ContactFormC } from "@modules/contact/components/contact";
+import { ContactForm } from "@modules/contact/components/contact";
 import { ContactDialog } from "./components/contact-dialog";
 
 import { Icon } from "astro-icon/components";
