feat: alert styling contact form

--- a/source/styles/theme.css
+++ b/source/styles/theme.css
@@ -37,6 +37,8 @@
     --muted-foreground: 24 5.4% 63.9%;
     --accent: 12 6.5% 15.1%;
     --accent-foreground: 60 9.1% 97.8%;
+    --success: 132 74% 31%;
+    --success-foreground: 60 9.1% 97.8%;
     --destructive: 0 62.8% 50.6%;
     --destructive-foreground: 60 9.1% 97.8%;
     --border: 12 6.5% 15.1%;
