feat: client translations plus i18n type fixes

--- a/source/pages/[...locale]/index.astro
+++ b/source/pages/[...locale]/index.astro
@@ -27,7 +27,7 @@ export const getStaticPaths = getLocalizedStaticPaths satisfies GetStaticPaths;
 
   <Canvas client:load />
 
-  <main class="space-y-48">
+  <main class="mt-32 space-y-48">
     <!--     <Hero />
  -->
     <Work />
