fix: alternative solution to import resolve failing in cloudflare worker

--- a/source/sections/projects/content.astro
+++ b/source/sections/projects/content.astro
@@ -1,7 +1,7 @@
 ---
 import ObservedSection from "@layouts/observed-section.astro";
 
-import { Paragraph } from "@app/modules/i18n";
+import { Paragraph } from "@app/modules/i18n/components";
 import ProjectCard from "./components/project-card.astro";
 import { projects } from "./lib/data";
 
