fix: scrolling disabled when modal opened plus contact form overflow

--- a/source/layouts/page.astro
+++ b/source/layouts/page.astro
@@ -45,13 +45,7 @@ const { title, description, bodyClass } = Astro.props;
       href="/favicon.svg"
     />
 
-    <script
-      is:inline
-      src="https://challenges.cloudflare.com/turnstile/v0/api.js"
-      async
-      defer
-    ></script>
-
+    <script src="@app/lib/polyfills"></script>
     <slot name="head" />
 
     <title>{title}</title>
