--- a/source/pages/[...locale]/index.astro
+++ b/source/pages/[...locale]/index.astro
@@ -20,11 +20,10 @@ export const getStaticPaths = getLocalizedStaticPaths satisfies GetStaticPaths;
 
 <Fragment slot="head">
   <script>
-    import { getLenisInstance } from "@app/lib/scroll";
+    import { initLenis } from "@app/lib/scroll";
 
     // Enable smooth-scrolling.
-    const lenis = getLenisInstance();
-    lenis?.start();
+    initLenis();
   </script>
 </Fragment>
 
