fix: client components hydration plus lenis destroy

--- a/source/pages/[...locale]/index.astro
+++ b/source/pages/[...locale]/index.astro
@@ -30,7 +30,7 @@ export const getStaticPaths = getLocalizedStaticPaths satisfies GetStaticPaths;
 <Page bodyClass="debug-screens">
   <Header />
 
-  <Canvas client:load />
+  <Canvas client:idle />
 
   <main class="mt-32 space-y-48">
     <!--     <Hero />
