fix: rootMargin in %

--- a/source/sections/about/content.astro
+++ b/source/sections/about/content.astro
@@ -237,7 +237,7 @@ const t = translations.sections.about;
     >
       <CharacterView
         className="pointer-events-none absolute inset-0 -top-4 size-full xs:-top-8"
-        client:visible={{ rootMargin: "50vh" }}
+        client:visible={{ rootMargin: "50%" }}
       />
 
       <div
@@ -249,7 +249,7 @@ const t = translations.sections.about;
       </div>
 
       <footer class="z-30 w-full">
-        <ContactDialog client:visible={{ rootMargin: "20vh" }} />
+        <ContactDialog client:visible={{ rootMargin: "20%" }} />
       </footer>
     </article>
 
