--- a/source/sections/skills/content.astro
+++ b/source/sections/skills/content.astro
@@ -15,7 +15,7 @@ import { SkillView } from "./components/skill-view";
     <SkillView
       className="pointer-events-none absolute inset-0 m-auto aspect-square h-[80%]"
       slot="skill-view"
-      client:visible={{ rootMargin: "50vh" }}
+      client:visible={{ rootMargin: "50%" }}
     />
   </SkillGallerySvelte>
 </ObservedSection>
