fix: minor styling issues in mobile

--- a/source/sections/work.astro
+++ b/source/sections/work.astro
@@ -20,7 +20,8 @@ const t = translations.sections.experience;
   title="Where I've worked"
   order={1}
   id="experience"
-  class="mx-auto max-w-screen-xl px-8 md:px-12 lg:px-16"
+  class="mx-auto max-w-screen-xl px-4 sm:px-8 md:px-12 lg:px-16 [&>h2]:pl-3 sm:[&>h2]:pl-6"
+  ,
   aria-label="Experience"
 >
   <div class="ml-2 flex w-full lg:ml-8">
