--- a/source/sections/projects/content.astro
+++ b/source/sections/projects/content.astro
@@ -11,7 +11,8 @@ const { locale } = Astro.locals;
 <ObservedSection
   class="mt-48"
   title="Some of my favourite projects"
-  class="mx-auto max-w-screen-2xl px-8 md:px-12 lg:px-16"
+  class="mx-auto max-w-screen-2xl px-4 sm:px-8 md:px-12 lg:px-16 [&>h2]:pl-3 sm:[&>h2]:pl-6"
+  ,
   id="projects"
   order={2}
 >
