--- a/source/layouts/page.astro
+++ b/source/layouts/page.astro
@@ -39,10 +39,40 @@ const { title, description, bodyClass } = Astro.props;
       rel="sitemap"
       href="/sitemap-index.xml"
     />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/apple-touch-icon.png"
+    />
     <link
       rel="icon"
-      type="image/svg+xml"
-      href="/favicon.svg"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon-16x16.png"
+    />
+    <link
+      rel="manifest"
+      href="/site.webmanifest"
+    />
+    <link
+      rel="mask-icon"
+      href="/safari-pinned-tab.svg"
+      color="#0c0a09"
+    />
+    <meta
+      name="msapplication-TileColor"
+      content="#0c0a09"
+    />
+    <meta
+      name="theme-color"
+      content="#0c0a09"
     />
 
     <script src="@app/lib/polyfills"></script>
