--- a/source/layouts/observed-section.astro
+++ b/source/layouts/observed-section.astro
@@ -30,7 +30,7 @@ const { order = 1, title, ...props } = Astro.props;
   // The "current" one should always be the (visible) one with the highest order (latest in the document).
   function getLatestVisibleSection(sections: Section[]) {
     const greaterOrder = -Infinity;
-    let latest = sections[0];
+    let latest = null;
 
     for (const section of sections) {
       if (section.order > greaterOrder && section.visible) {
@@ -64,7 +64,9 @@ const { order = 1, title, ...props } = Astro.props;
       }
 
       // Find the latest visible section.
-      const newLast = getLatestVisibleSection(Object.values(sectionStates));
+      const newLast =
+        getLatestVisibleSection(Object.values(sectionStates)) ??
+        lastVisibleSection;
 
       // If there's a new section in view, update the corresponding links.
       if (newLast !== lastVisibleSection) {
